重写操作生成逻辑